--- a/src/app/scss/Header.scss
+++ b/src/app/scss/Header.scss
@@ -38,12 +38,16 @@ header {
 
     &::after {
         background-color: $muted-color;
+        border-radius: 20px;
         content: "";
         filter: brightness(100%);
         height: 2px;
         inset: 0;
+        left: 50%;
         opacity: .15;
         position: absolute;
         top: 100%;
+        transform: translate(-50%);
+        width: calc(99% + 2.5px);
     }
 }
