--- a/src/app/scss/Home.scss
+++ b/src/app/scss/Home.scss
@@ -2,16 +2,127 @@
 
 .home-page {
     h2 {
-        margin-bottom: 1.5rem;
+        margin: auto;
     }
+    
+    .card-gallery {
+        display: flex;
+        justify-content: center;
+        margin-block: 10px;
+        
+        .card {
+            border-radius: 20px;
+            box-shadow: 0 10px 30px #{$muted-color}30;
+            cursor: default;
+            height: 70dvh;
+            overflow: hidden;
+            position: relative;
+            transition: all 300ms ease;
+            width: 50dvw;
+            
+            img {
+                object-fit: cover;
+                position: relative;
+                transition: all 300ms ease;
+                user-select: none;
+            }
+            
+            &:hover img {
+                transform: scale(1.05);
+            }
 
-    .card {
-        background-color: #{$muted-color}20;
-        border-radius: 10px;
-        padding: 10px;
+            @media (max-width: 1024px) {
+                width: 90dvw;
+            }
+        }
 
-        @media (min-width: 1000px) {
-            max-width: 60dvw;
+        + .current-date {
+            color: $muted-color;
+            cursor: default;
+            margin: auto;
+            text-align: center;
+        }
+
+        .card-content {
+            bottom: 0;
+            left: 0;
+            opacity: 1;
+            padding: 50px;
+            position: absolute;
+            right: 0;
+            transform: translateY(0);
+            z-index: 10;
+    
+            @each $theme in ("dark", "light") {
+                @media (prefers-color-scheme: #{$theme}) {
+                    @if $theme == "light" {
+                        background: linear-gradient(transparent, $light-color);
+                        color: $dark-color;
+                    } @else {
+                        background: linear-gradient(transparent, $dark-color);
+                        color: $light-color;
+                    }
+                }
+             }
+        }
+    
+        .card-title {
+            font-size: 1.8rem;
+            font-weight: bolder;
+            letter-spacing: .5px;
+            margin-bottom: 10px;
+            text-shadow: 0 2px 5px #{$muted-color}50;
+        }
+    
+        .card-description {
+            font-size: 1.1rem;
+            font-style: italic;
+            line-height: 1.6;
+            margin-bottom: 25px;
+            text-shadow: 0 1px 3px #{$muted-color}50;
+    
+            &::before {
+                content: "❝";
+                font-size: 1.5rem;
+                margin-right: 5px;
+            }
+            
+            &::after {
+                content: "❞";
+                font-size: 1.5rem;
+                margin-left: 5px;
+            }
+        }
+    
+        .card-tags {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-top: 10px;
+        }
+    
+        .tag {
+            all: unset;
+            backdrop-filter: blur(10px);
+            background: #{$muted-color}15;
+            border-radius: 20px;
+            border: 1px solid #{$muted-color}50;
+            cursor: pointer;
+            display: inline-block;
+            font-size: .9rem;
+            font-weight: 600;
+            padding: 8px 18px;
+            transition: all 300ms ease;
+            user-select: none;
+            
+            &:hover:not(:active) {
+                background: $primary-color;
+                transform: translateY(-2px);
+            }
+    
+            &:active {
+                transform: scale(.9);
+            }
         }
     }
 }
