--- a/src/app/scss/index.scss
+++ b/src/app/scss/index.scss
@@ -1,4 +1,5 @@
 @use "./global.scss" as *;
 
-@use "./Home.scss" as *;
 @use "./Header.scss" as *;
+@use "./Home.scss" as *;
+@use "./Modal.scss" as *;
