--- a/src/app/scss/index.scss
+++ b/src/app/scss/index.scss
@@ -2,4 +2,5 @@
 
 @use "./Header.scss" as *;
 @use "./Home.scss" as *;
-@use "./Modal.scss" as *;
+@use "./Loader.scss" as *;
+@use "./ModalManager.scss" as *;
